# nativel2

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/nativel2_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  nativel2.dart  nativel2_bindings_generated.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
gol2/: .gitignore  README.md  go.mod  main.go
ios/: nativel2.podspec
ios/Classes/: nativel2.c
lib/: nativel2.dart  nativel2_bindings_generated.dart
linux/: CMakeLists.txt
macos/: nativel2.podspec
src/: CMakeLists.txt  CMakeLists22.txt  nativel2.c  nativel2.h
src/gol2/: README.md  go.mod  main.go
windows/: CMakeLists.txt
